--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "colors": "^1.4.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
   },
